fix z-index issue

--- a/example-vault/pixel-banner-example/.obsidian/plugins/pexels-banner/styles.css
+++ b/example-vault/pixel-banner-example/.obsidian/plugins/pexels-banner/styles.css
@@ -23,7 +23,7 @@
 	will-change: opacity;
 	transform: translateZ(0);
 	background-repeat: no-repeat;
-    z-index: -1;
+    z-index: 0;
 }
 /* fix for banner image overlapping with note content */
 .pixel-banner-image ~ div {
